; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/systat/extr_sctp.c_fetchsctp.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/systat/extr_sctp.c_fetchsctp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"net.inet.sctp.stats\00", align 1
@curstat = common dso_local global i32 0, align 4
@oldstat = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [31 x i8] c"sysctl getting sctpstat failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fetchsctp() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i8*, align 8
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  %3 = load i32, i32* @curstat, align 4
  store i32 %3, i32* @oldstat, align 4
  store i64 4, i64* %1, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i64 @sysctlbyname(i8* %4, i32* @curstat, i64* %1, i32* null, i32 0)
  %6 = icmp slt i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = call i32 @error(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0))
  br label %9

9:                                                ; preds = %7, %0
  ret void
}

declare dso_local i64 @sysctlbyname(i8*, i32*, i64*, i32*, i32) #1

declare dso_local i32 @error(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
